--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ gems: [jekyll-paginate]
 permalink:        /blog/:year/:month/:day/:title
 
 # Setup
-title:            'Adrian Marinescu`s Blog'
-tagline:          'Adrian Marinescu`s Personal Blog'
+title:            'Adrian Marinescu'
+tagline:          'Personal Blog'
 description:      'Adrian Marinescu`s Personal Blog'
 url:              'https://marinescuadrian.github.io'
 baseurl:          ''
